--- a/veeru.html
+++ b/veeru.html
@@ -5,7 +5,8 @@
 <html>
 <h1>my name is veerendra rawat</h1>
 <p>this is my first paragraph</p>
-
+<h1>vaibhav patel</h1>
+<p>this is my first paragraph</p>
 
 
 </html>
